--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.2",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
